codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__last_question_with_queue.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
• 2 queued
  Latest: newer
        · older

  2 of 2
  Second?

  › 1. Next
    2. Other

  enter submit   ctrl + ] skip   ⌥ + ↓ prev question   ⌥ + ↑ queued messages
