codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__questions_cleared_by_follow_up.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
╭──────────────────────────────────────────────────────────────────────────────╮
┃ ›                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
