codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__questions_with_status_and_queue.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "format!(\"OPEN\\n{open}\\n\\nONLY QUESTIONS\\n{completed}\")"
---
OPEN
✦ Working                                                     0s · Esc interrupt

• 1 queued
  Latest: queued follow-up

ONLY QUESTIONS
• Queued follow-up inputs
  ? 2 questions
    ⌥ + ↑ to answer
╭──────────────────────────────────────────────────────────────────────────────╮
┃ › main draft                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯
                                                             100% context left
